--- a/index.html
+++ b/index.html
@@ -1,8 +1,33 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <link rel="stylesheet" href="style.css">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Online Result</title>
+<link href="jeshi.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
-<h1>suji is a good girl</h1>
+
+<body><br />
+
+<div align="center">
+<span class="head">slots booking</span>
+<hr class="hr" />
+<br />
+<br />
+<span class="subhead">View Details</span>
+<br />
+<br />
+<br />
+<form method="post" action="viewResult.php">
+<table border="0" cellpadding="5" cellspacing="5" class="design">
+<tr><td colspan="2" align="center" class="msg"><?php echo $msg;?></td></tr>
+<tr><td class="labels">patient No.:</td><td><input type="text" required="required" name="roll" class="fields" size="15" placeholder="Enter Roll No." /></td></tr>
+<tr><td colspan="2" align="center"><input type="submit" value="SHOW" class="fields" /></td></tr>
+</table>
+</form>
+<br />
+<br />
+<a href="register.php" class="link">Customer Register</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="faculty.php" class="link">Doctor Login</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="registerFaculty.php" class="link">Doctor Registration</a>
+</div>
 </body>
 </html>
